--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -48,6 +48,11 @@
                   <label for="vote-average-filter-max">Rating (max):</label>
                   <input type="number" id="vote-average-filter-max" name="vote_average_max" min="1" max="10" step="0.1" class="form-control" value="{{ vote_average_max }}">
                 </div>
+                  <div class="form-group">
+                  <label for="title-search">Search </label>
+                  <input type="search" id="title-search" name="title" class="form-control" placeholder="Enter title" value="{{ title }}" oninput="submitForm(event)">
+
+              </div>
                 <div class="form-group">
                   <button type="submit" class="btn btn-primary">Filter</button>
                 </div>
