--- a/aMovieDatabase/movies/templates/movie_info.html
+++ b/aMovieDatabase/movies/templates/movie_info.html
@@ -35,6 +35,45 @@
                         <a href="{% url 'login' %}" class="btn btn-primary">Login to add to Watchlist</a>
                     {% endif %}
                     </div>
+                    <BR>
+                    {% if user_rating %}
+                        <form method="POST" action="{% url 'movie_detail' movie.title %}">
+                         {% csrf_token %}
+                         <label class="font-weight-bold text-secondary">Rate this movie:</label>
+                          <div class="rating">
+                            <input type="radio" id="star10" name="rating" value="10" {% if user_rating.rating == 10 %}checked{% endif %}/><label for="star10" title="5 stars"></label>
+                            <input type="radio" id="star9" name="rating" value="9" {% if user_rating.rating == 9 %}checked{% endif %}/><label for="star9" title="4.5 stars"></label>
+                            <input type="radio" id="star8" name="rating" value="8" {% if user_rating.rating == 8 %}checked{% endif %}/><label for="star8" title="4 stars"></label>
+                            <input type="radio" id="star7" name="rating" value="7" {% if user_rating.rating == 7 %}checked{% endif %}/><label for="star7" title="3.5 stars"></label>
+                            <input type="radio" id="star6" name="rating" value="6" {% if user_rating.rating == 6 %}checked{% endif %}/><label for="star6" title="3 stars"></label>
+                            <input type="radio" id="star5" name="rating" value="5" {% if user_rating.rating == 5 %}checked{% endif %}/><label for="star5" title="2.5 stars"></label>
+                              <input type="radio" id="star4" name="rating" value="4" {% if user_rating.rating == 4 %}checked{% endif %}/><label for="star4" title="2 stars"></label>
+                            <input type="radio" id="star3" name="rating" value="3" {% if user_rating.rating == 3 %}checked{% endif %}/><label for="star3" title="1.5 stars"></label>
+                            <input type="radio" id="star2" name="rating" value="2" {% if user_rating.rating == 2 %}checked{% endif %}/><label for="star2" title="1 star"></label>
+                            <input type="radio" id="star1" name="rating" value="1" {% if user_rating.rating == 1 %}checked{% endif %}/><label for="star1" title="0.5 stars"></label>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Save rating</button>
+                            </form>
+                    {% else %}
+                            <form method="POST" action="{% url 'movie_detail' movie.title %}">
+                             {% csrf_token %}
+                             <label class="font-weight-bold text-secondary">Rate this movie:</label>
+                              <div class="rating">
+                                <input type="radio" id="star10" name="rating" value="10"/><label for="star10" title="5 stars"></label>
+                                <input type="radio" id="star9" name="rating" value="9"/><label for="star9" title="4.5 stars"></label>
+                                <input type="radio" id="star8" name="rating" value="8"/><label for="star8" title="4 stars"></label>
+                                <input type="radio" id="star7" name="rating" value="7"/><label for="star7" title="3.5 stars"></label>
+                                <input type="radio" id="star6" name="rating" value="6"/><label for="star6" title="3 stars"></label>
+                                <input type="radio" id="star5" name="rating" value="5"/><label for="star5" title="2.5 stars"></label>
+                                <input type="radio" id="star4" name="rating" value="4"/><label for="star4" title="2 stars"></label>
+                                <input type="radio" id="star3" name="rating" value="3"/><label for="star3" title="1.5 stars"></label>
+                                <input type="radio" id="star2" name="rating" value="2"/><label for="star2" title="1 star"></label>
+                                <input type="radio" id="star1" name="rating" value="1"/><label for="star1" title="0.5 stars"></label>
+                              </div>
+                              <button type="submit" class="btn btn-primary">Save rating</button>
+                        </form>
+                    {% endif %}
+
                 </div>
                 <div class="col-md-8">
                     <h1 class="font-weight-bold mb-3">{{ movie.title }} ( {{movie.release_date|date:"Y" }} )</h1>
@@ -95,4 +134,5 @@
         </div>
     </div>
 </div>
+
 {% endblock %}
