--- a/aMovieDatabase/core/templates/includes/navbar.html
+++ b/aMovieDatabase/core/templates/includes/navbar.html
@@ -10,7 +10,7 @@
         <a class="nav-link" href="/movies">Movies</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="/watchlist">Watchlist</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact</a>
