--- a/aMovieDatabase/accounts/static/style.css
+++ b/aMovieDatabase/accounts/static/style.css
@@ -177,7 +177,7 @@
 }
 
 form input[type="submit"][name="remove_review"] {
-  width: 30%;
+  width: 10%;
   position: absolute;
   top: 10px;
   right: 10px;
@@ -295,7 +295,7 @@ form input[type="submit"]:hover {
 
 
 .filter label {
-  font-size: 1rem;
+  font-size: 15px;
   color: white;
   text-align: left;
 }
@@ -354,6 +354,11 @@ form input[type="submit"]:hover {
 width: 100%;
 
 }
+
+  .row a{
+    text-decoration: none;
+    color: aliceblue;
+  }
 
 
 /* movies */
@@ -528,4 +533,12 @@ body{
     font-size: 1.5em; /* Increase font size */
     color: #ffc107; /* Set text color */
   }
+
+.box{
+padding: 20px;
+background-color: black;
+width:40%;
+border-radius: 15px;
+ margin: 0 auto;
+}
 
