--- a/aMovieDatabase/core/templates/home.html
+++ b/aMovieDatabase/core/templates/home.html
@@ -9,6 +9,7 @@
 
 <body style="height: 100%; width: 100%; background-image: url('https://wallpaper.dog/large/20493501.jpg')">
   <div class="welcome-section">
+    <div class="box">
     <h1 style="text-align: center;">Welcome to <span style="color: rgb(255, 0, 0);">A</span>MovieDB</h1>
     <p style="color: rgb(255, 255, 255);"><strong><span>The ultimate destination for movie lovers</span></strong></p>
     {% if not user.is_authenticated %}
@@ -17,6 +18,7 @@
     {% else %}
     <a href="/movies" class="btn btn-lg btn-secondary mr-2">See More</a>
     {% endif %}
+  </div>
   </div>
   <div class="welcome-section1">
     <div class="container">
