Clear field feature

--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -27,8 +27,8 @@
                                {{ filter.form }}
                 </div>
                 <br><br>
-                 <button type="submit" class="btn btn-primary">Filter</button>
-
+                 <button type="submit" class="btn btn-primary">Filter</button> <br><br>
+                <a href="/movies" class="btn btn-primary" id="clear">Clear</a>
           </form>
 
             </div>
@@ -79,10 +79,5 @@
 
 </body>
 
-<style>
-  .row a{
-    text-decoration: none;
-    color: aliceblue;
-  }
-</style>
+
 {% endblock %}
