Fix pagination ajax

--- a/aMovieDatabase/movies/templates/pagination.html
+++ b/aMovieDatabase/movies/templates/pagination.html
@@ -1,3 +1,4 @@
+<div id="pagination-container">
 {% if movies.has_other_pages %}
   <ul class="pagination">
     {% if movies.has_previous %}
@@ -32,3 +33,5 @@
 
   </ul>
 {% endif %}
+
+  </div>
