--- a/aMovieDatabase/accounts/static/style.css
+++ b/aMovieDatabase/accounts/static/style.css
@@ -557,5 +557,19 @@ background-color: black;
 width:40%;
 border-radius: 15px;
  margin: 0 auto;
+
 }
 
+.welcome-section {
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.welcome-section h1,
+.welcome-section p {
+    color: rgba(255, 255, 255, 1);
+}
+
+.text-container {
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 20px; /* add some padding to separate text from the edges of the container */
+}
