--- a/aMovieDatabase/core/templates/home.html
+++ b/aMovieDatabase/core/templates/home.html
@@ -8,6 +8,7 @@
 </head>
 
 <body style="height: 100%; width: 100%; background-image: url('https://wallpaper.dog/large/20493501.jpg')">
+<div class="bg-overlay"></div>
   <div class="welcome-section">
       <div class="text-container">
     <h1 style="text-align: center;">Welcome to <span style="color: rgb(255, 0, 0);">A</span>MovieDB</h1>
