--- a/aMovieDatabase/core/templates/includes/navbar.html
+++ b/aMovieDatabase/core/templates/includes/navbar.html
@@ -1,53 +1,27 @@
 <nav class="navbar navbar-expand-lg navbar-dark navbar-transparent">
-    <a class="navbar-brand" href="/">A Movie Database</a>
+  <a class="navbar-brand" href="/">A Movie Database</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav" >
+  <div class="collapse navbar-collapse" id="navbarNav">
     {% if user.is_authenticated %}
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item {% if request.path == '/movies/' %}active{% endif %}">
         <a class="nav-link" href="/movies">Movies</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item {% if request.path == '/watchlist/' %}active{% endif %}">
         <a class="nav-link" href="/watchlist">Watchlist</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item {% if request.path == '/contact/' %}active{% endif %}">
         <a class="nav-link" href="#">Contact</a>
       </li>
     </ul>
     {% endif %}
     <ul class="navbar-nav ml-auto">
       {% if user.is_authenticated %}
-      <li class="nav-item mx-2"><a href="#">{{ user.username }}</a></li>
-      <li class="nav-item mx-2"><a href="{% url 'logout' %}">Logout</a></li>
+      <li class="nav-item  mx-2"><a class="nav-link" href="#">{{ user.username }}</a></li>
+      <li class="nav-item mx-2"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
       {% endif %}
     </ul>
   </div>
 </nav>
-
-
-
-
-
-
-
-
-<style>
-
-.navbar a,
-.navbar button {
-color: white;
-}
-
-.navbar a:hover,
-.navbar button:hover {
-background-color: rgb(3, 3, 3);
-color: rgb(251, 249, 249);
-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-
-</style>
-
-
