--- a/aMovieDatabase/movies/templates/watchlist.html
+++ b/aMovieDatabase/movies/templates/watchlist.html
@@ -16,7 +16,7 @@
     <tr>
       <th>Poster image</th>
       <th>Title</th>
-      <th>Your Rating / Movie Rating</th>
+      <th>Your rating / Movie rating</th>
     </tr>
   </thead>
   <tbody>
@@ -29,23 +29,13 @@
                 <img class="img-thumbnail" src="{{ review_image.image }}" style="margin-top: 10px;">
               </a>
             </td>
-            <td>{{ watchlist_item.movie }}</td>
+            <td class="movie-title">{{ watchlist_item.movie }}</td>
             <td class="{% if rating.rating <= 2 %}text-danger{% elif rating.rating >= 3 and rating.rating <= 4 %}text-warning{% else %}text-success{% endif %}">
-
-              {% for rating in ratings %}
-        {% if watchlist_item.user == rating.username %}
-            {{ rating.rating }} /
-        {% endif %}
-         {% else %}
-            No rating
-    {% endfor %}
-
-
-
+                {{ watchlist_item.movie_rating }} /
               {% for movie in movies %}
-           {% if movie.title == watchlist_item.movie  %}
-             {{ movie.vote_average }}
-                {% endif %}
+                {% if movie.title == watchlist_item.movie%}
+                  {{ movie.vote_average}}
+                {% endif%}
               {% endfor %}
             </td>
           {% endif %}
