Alignment fix for watchlist

--- a/aMovieDatabase/accounts/static/style.css
+++ b/aMovieDatabase/accounts/static/style.css
@@ -584,12 +584,18 @@ body{
   th {
     background-color: #f2f2f2;
     color: black;
-    text-align: left;
+    text-align: center;
     padding: 8px;
   }
 
+    .table-dark td{
+        vertical-align: middle;
+    }
+
   td {
     padding: 8px;
+    text-align: center;
+    vertical-align: middle;
   }
 
   img {
