--- a/aMovieDatabase/core/templates/includes/navbar.html
+++ b/aMovieDatabase/core/templates/includes/navbar.html
@@ -13,7 +13,7 @@
         <a class="nav-link" href="/watchlist">Watchlist</a>
       </li>
       <li class="nav-item {% if request.path == '/contact/' %}active{% endif %}">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="/about">About</a>
       </li>
     </ul>
     {% endif %}
