'paradise' to 'platform' in about.html

--- a/aMovieDatabase/core/templates/about.html
+++ b/aMovieDatabase/core/templates/about.html
@@ -43,7 +43,7 @@
     <div class="container">
       <div class="card">
         <h2>Our Web Application</h2>
-        <p>Welcome to our movie-lover's paradise! Our web application offers a seamless browsing and searching experience for all the latest and greatest films. Discover movie details, ratings, and reviews with ease, and even filter results by your preferred genre, release year, or rating. Keep track of your must-watch list with our convenient watchlist feature.</p>
+        <p>Welcome to our movie-lover's platform! Our web application offers a seamless browsing and searching experience for all the latest and greatest films. Discover movie details, ratings, and reviews with ease, and even filter results by your preferred genre, release year, or rating. Keep track of your must-watch list with our convenient watchlist feature.</p>
       </div>
       <div class="card">
         <h2>Our Team</h2>
