--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -7,8 +7,8 @@
 <head>
   <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 </head>
-<body style="background-color: aliceblue; background-image: url('https://t3.ftcdn.net/jpg/02/66/14/94/360_F_266149478_uV3E2THnewWN5jaAdoxraB6TjwLQyqXi.jpg')">
-  <section  style="align-content: center; border: solid rgb(255, 0, 0) ; border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
+<body></body>
+  <section class="section-featured-movies">
     <div class="container mt-5">
       <div class="section-title">
         <div class="row d-flex justify-content-center">
@@ -20,7 +20,7 @@
     </section>
     <section>
       <div class="container mt-5">
-        <div class="card filter" style="border: solid rgb(11, 143, 245); border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
+        <div class="card filter filter-bg">
             <div class="card-body">
               <form method="get">
                 <div class="form-group">
@@ -38,7 +38,7 @@
   </section>
 
 
-<section id="movie-card-container" style="align-content: center; border: solid rgb(255, 0, 0); border-radius: 20px; background-image: url('https://wallpaperaccess.com/full/1091558.jpg');">
+<section id="movie-card-container">
   <div class="container mt-5">
     <div class="section-title">
       <div class="col-lg-12 d-flex justify-content-center">
