--- a/aMovieDatabase/core/templates/includes/navbar.html
+++ b/aMovieDatabase/core/templates/includes/navbar.html
@@ -12,8 +12,11 @@
       <li class="nav-item {% if request.path == '/watchlist/' %}active{% endif %}">
         <a class="nav-link" href="/watchlist">Watchlist</a>
       </li>
-      <li class="nav-item {% if request.path == '/contact/' %}active{% endif %}">
+      <li class="nav-item {% if request.path == '/about/' %}active{% endif %}">
         <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item {% if request.path == '/contact/' %}active{% endif %}">
+        <a class="nav-link" href="/contact">Contact</a>
       </li>
     </ul>
     {% endif %}
