--- a/aMovieDatabase/accounts/static/style.css
+++ b/aMovieDatabase/accounts/static/style.css
@@ -657,3 +657,13 @@ img {
   transform: translate(-50%, -50%);
   text-align: center;
 }
+
+.my-form {
+  background-color: white;
+}
+
+.title2{
+  margin-left: 0em   !important;
+  color: black   !important;
+  background-color: white   !important;
+}
