--- a/aMovieDatabase/movies/templates/movies.html
+++ b/aMovieDatabase/movies/templates/movies.html
@@ -35,6 +35,7 @@
           </div>
       </div>
     </section>
+test2
   </section>
 
 
@@ -77,7 +78,7 @@
       </div>
         {% include 'pagination.html' %}
 </div>
-
+test
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
 document.addEventListener("click", function(event) {
